--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@600&family=Nova+Square&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="lib/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -49,17 +50,94 @@
     </header>
 
     <div class="container-fluid">
+        <section class="row title-row">
+            <div class="fill-screen" style="background-image: url(./images/Coffee-Keyboard.jpg);">
+                <img class="title img-circle img-responsive" src="./images/my-pic-removebg.jpg" alt="My Picture"
+                    width="250px" height="250px">
+                <div class="title first-name">Muhammad <span class="last-name">Akhtar</span></div>
+            </div>
+        </section>
+
         <section class="row">
-            <article>
-                <h3>About Me</h3>
+            <article class="sec-header">
+                <h3> <i class="fa fa-user"></i> About Me</h3>
             </article>
-            <article>
+            <article class="col-md-6">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit porro nisi qui nesciunt
+                    praesentium dolor, aspernatur dolores suscipit labore omnis fugit facere nobis quasi hic impedit
+                    fugiat id? Omnis laborum inventore corporis, reiciendis quas quos quia vitae magnam reprehenderit
+                    iste, dolorum quibusdam fugiat nisi nam id neque iure eum!</p>
+            </article>
+            <article class="col-md-6 table-custom">
+                <dl class="dl-horizontal">
+                    <dt>Email</dt>
+                    <dd> akhtarm821@gmail.com</dd>
+                    <dt>Mobile</dt>
+                    <dd>+92 309 8638327</dd>
+                    <dt>LinkedIn</dt>
+                    <dd>akhtarm821@gmail.com</dd>
+                </dl>
+                <div class="social">
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-github"></i></a>
+                    <a href="#"><i class="fa fa-codepen"></i></a>
+                </div>
+            </article>
+        </section>
+
+        <section class="row">
+            <div class="fil-screen fixed-attachment" style="background-image: url(./images/Developer.jpg)"></div>
+        </section>
+
+        <section class="row">
+            <article class="sec-header">
+                <h3> <i class="fa fa-history"></i> Experience</h3>
+            </article>
+            <article class="col-md-6">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit porro nisi qui nesciunt
                     praesentium dolor, aspernatur dolores suscipit labore omnis fugit facere nobis quasi hic impedit
                     fugiat id? Omnis laborum inventore corporis, reiciendis quas quos quia vitae magnam reprehenderit
                     iste, dolorum quibusdam fugiat nisi nam id neque iure eum!</p>
             </article>
         </section>
+
+        <section class="row">
+            <div class="fil-screen fixed-attachment" style="background-image: url(./images/Developer-1.jpg)"></div>
+        </section>
+
+        <section class="row">
+            <article class="sec-header">
+                <h3>Skills</h3>
+            </article>
+            <article class="col-md-6">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit porro nisi qui nesciunt
+                    praesentium dolor, aspernatur dolores suscipit labore omnis fugit facere nobis quasi hic impedit
+                    fugiat id? Omnis laborum inventore corporis, reiciendis quas quos quia vitae magnam reprehenderit
+                    iste, dolorum quibusdam fugiat nisi nam id neque iure eum!</p>
+            </article>
+        </section>
+
+        <section class="row">
+            <div class="fil-screen fixed-attachment" style="background-image: url(./images/Php.jpg)"></div>
+        </section>
+
+        <section class="row">
+            <article class="sec-header">
+                <h3>My Work</h3>
+            </article>
+            <article class="col-md-6">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit porro nisi qui nesciunt
+                    praesentium dolor, aspernatur dolores suscipit labore omnis fugit facere nobis quasi hic impedit
+                    fugiat id? Omnis laborum inventore corporis, reiciendis quas quos quia vitae magnam reprehenderit
+                    iste, dolorum quibusdam fugiat nisi nam id neque iure eum!</p>
+            </article>
+        </section>
+
+        <section class="row">
+            <div class="fil-screen fixed-attachment" style="background-image: url(./images/Javascript.jpg)"></div>
+        </section>
+
     </div>
 
     <footer>
@@ -72,6 +150,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
