Experience Section started

--- a/index.html
+++ b/index.html
@@ -2,155 +2,171 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@600&family=Nova+Square&display=swap"
-        rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="lib/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Portfolio</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@600&family=Nova+Square&display=swap"
+		rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="lib/bootstrap.min.css">
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Brand</a>
-                </div>
+	<header>
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+						data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#">Brand</a>
+				</div>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-                    </ul>
+					</ul>
 
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>
-                        <li><a href="#">Link 3</a></li>
-                        <li><a href="#">Link 4</a></li>
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="#">Link 1</a></li>
+						<li><a href="#">Link 2</a></li>
+						<li><a href="#">Link 3</a></li>
+						<li><a href="#">Link 4</a></li>
 
-                    </ul>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-        </nav>
+					</ul>
+				</div><!-- /.navbar-collapse -->
+			</div><!-- /.container-fluid -->
+		</nav>
 
-    </header>
+	</header>
 
-    <div class="container-fluid">
-        <section class="row title-row">
-            <div class="fill-screen" style="background-image: url(./images/Coffee-Keyboard.jpg);">
-                <img class="title img-circle img-responsive" src="./images/my-pic-removebg.jpg" alt="My Picture"
-                    width="250px" height="250px">
-                <div class="title first-name">Muhammad <span class="last-name">Akhtar</span></div>
-            </div>
-        </section>
+	<div class="container-fluid">
+		<section class="row title-row">
+			<div class="fill-screen" style="background-image: url(./images/Coffee-Keyboard.jpg);">
+				<img class="title img-circle img-responsive" src="./images/my-pic-removebg.jpg" alt="My Picture"
+					width="250px" height="250px">
+				<div class="title first-name">Muhammad <span class="last-name">Akhtar</span></div>
+			</div>
+		</section>
 
-        <section class="row">
-            <article class="sec-header">
-                <h3> <i class="fa fa-user"></i> About Me</h3>
-            </article>
-            <article class="col-md-6">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit porro nisi qui nesciunt
-                    praesentium dolor, aspernatur dolores suscipit labore omnis fugit facere nobis quasi hic impedit
-                    fugiat id? Omnis laborum inventore corporis, reiciendis quas quos quia vitae magnam reprehenderit
-                    iste, dolorum quibusdam fugiat nisi nam id neque iure eum!</p>
-            </article>
-            <article class="col-md-6 table-custom">
-                <dl class="dl-horizontal">
-                    <dt>Email</dt>
-                    <dd> akhtarm821@gmail.com</dd>
-                    <dt>Mobile</dt>
-                    <dd>+92 309 8638327</dd>
-                    <dt>LinkedIn</dt>
-                    <dd>akhtarm821@gmail.com</dd>
-                </dl>
-                <div class="social">
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-github"></i></a>
-                    <a href="#"><i class="fa fa-codepen"></i></a>
-                </div>
-            </article>
-        </section>
+		<section class="row">
+			<article class="sec-header">
+				<h3> <i class="fa fa-user"></i> About Me</h3>
+			</article>
+			<article class="col-md-6">
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit porro nisi qui nesciunt
+					praesentium dolor, aspernatur dolores suscipit labore omnis fugit facere nobis quasi hic impedit
+					fugiat id? Omnis laborum inventore corporis, reiciendis quas quos quia vitae magnam reprehenderit
+					iste, dolorum quibusdam fugiat nisi nam id neque iure eum!</p>
+			</article>
+			<article class="col-md-6 table-custom">
+				<dl class="dl-horizontal">
+					<dt>Email</dt>
+					<dd> akhtarm821@gmail.com</dd>
+					<dt>Mobile</dt>
+					<dd>+92 309 8638327</dd>
+					<dt>LinkedIn</dt>
+					<dd>akhtarm821@gmail.com</dd>
+				</dl>
+				<div class="social">
+					<a href="#"><i class="fa fa-linkedin"></i></a>
+					<a href="#"><i class="fa fa-twitter"></i></a>
+					<a href="#"><i class="fa fa-github"></i></a>
+					<a href="#"><i class="fa fa-codepen"></i></a>
+				</div>
+			</article>
+		</section>
 
-        <section class="row">
-            <div class="fil-screen fixed-attachment" style="background-image: url(./images/Developer.jpg)"></div>
-        </section>
+		<section class="row">
+			<div class="fil-screen fixed-attachment" style="background-image: url(./images/Developer.jpg)"></div>
+		</section>
 
-        <section class="row">
-            <article class="sec-header">
-                <h3> <i class="fa fa-history"></i> Experience</h3>
-            </article>
-            <article class="col-md-6">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit porro nisi qui nesciunt
-                    praesentium dolor, aspernatur dolores suscipit labore omnis fugit facere nobis quasi hic impedit
-                    fugiat id? Omnis laborum inventore corporis, reiciendis quas quos quia vitae magnam reprehenderit
-                    iste, dolorum quibusdam fugiat nisi nam id neque iure eum!</p>
-            </article>
-        </section>
+		<section class="row">
+			<article class="sec-header">
+				<h3> <i class="fa fa-history"></i> Experience</h3>
+			</article>
+			<article>
+				<div class="card-container">
+					<div class="card">
+						<div class="front">
+							<div>
+								<h2><i class="fab fa-laravel">Put bitsoft sol icon here</i></h2>
+								<h4>Bitsoft Solutions (June 2020 - March 2021)</h4>
+								<h6>Full Stack Web Developer</h6>
+							</div>
+						</div>
+						<div class="back">
+							<div>
+								<h2><i class="fab fa-laravel"></i></h2>
+								<h4>Full Stack Web Developer</h4>
+								<h6>I have spent nine months as full stack developer at bitsoft solutions pvt. 
+								In this duration I have worked on three wordpress plugin, build company's landing page, four PHP core projects and two codeigniter projects</h6>
+							</div>
+						</div>
+					</div>
+				</div>
+			</article>
 
-        <section class="row">
-            <div class="fil-screen fixed-attachment" style="background-image: url(./images/Developer-1.jpg)"></div>
-        </section>
+		</section>
 
-        <section class="row">
-            <article class="sec-header">
-                <h3>Skills</h3>
-            </article>
-            <article class="col-md-6">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit porro nisi qui nesciunt
-                    praesentium dolor, aspernatur dolores suscipit labore omnis fugit facere nobis quasi hic impedit
-                    fugiat id? Omnis laborum inventore corporis, reiciendis quas quos quia vitae magnam reprehenderit
-                    iste, dolorum quibusdam fugiat nisi nam id neque iure eum!</p>
-            </article>
-        </section>
+		<section class="row">
+			<div class="fil-screen fixed-attachment" style="background-image: url(./images/Developer-1.jpg)"></div>
+		</section>
 
-        <section class="row">
-            <div class="fil-screen fixed-attachment" style="background-image: url(./images/Php.jpg)"></div>
-        </section>
+		<section class="row">
+			<article class="sec-header">
+				<h3>Skills</h3>
+			</article>
+			<article class="col-md-6">
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit porro nisi qui nesciunt
+					praesentium dolor, aspernatur dolores suscipit labore omnis fugit facere nobis quasi hic impedit
+					fugiat id? Omnis laborum inventore corporis, reiciendis quas quos quia vitae magnam reprehenderit
+					iste, dolorum quibusdam fugiat nisi nam id neque iure eum!</p>
+			</article>
+		</section>
 
-        <section class="row">
-            <article class="sec-header">
-                <h3>My Work</h3>
-            </article>
-            <article class="col-md-6">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit porro nisi qui nesciunt
-                    praesentium dolor, aspernatur dolores suscipit labore omnis fugit facere nobis quasi hic impedit
-                    fugiat id? Omnis laborum inventore corporis, reiciendis quas quos quia vitae magnam reprehenderit
-                    iste, dolorum quibusdam fugiat nisi nam id neque iure eum!</p>
-            </article>
-        </section>
+		<section class="row">
+			<div class="fil-screen fixed-attachment" style="background-image: url(./images/Php.jpg)"></div>
+		</section>
 
-        <section class="row">
-            <div class="fil-screen fixed-attachment" style="background-image: url(./images/Javascript.jpg)"></div>
-        </section>
+		<section class="row">
+			<article class="sec-header">
+				<h3>My Work</h3>
+			</article>
+			<article class="col-md-6">
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit porro nisi qui nesciunt
+					praesentium dolor, aspernatur dolores suscipit labore omnis fugit facere nobis quasi hic impedit
+					fugiat id? Omnis laborum inventore corporis, reiciendis quas quos quia vitae magnam reprehenderit
+					iste, dolorum quibusdam fugiat nisi nam id neque iure eum!</p>
+			</article>
+		</section>
 
-    </div>
+		<section class="row">
+			<div class="fil-screen fixed-attachment" style="background-image: url(./images/Javascript.jpg)"></div>
+		</section>
 
-    <footer>
-        <h2>
-            Footer
-        </h2>
-    </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
-        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
+	<footer>
+		<h2>
+			Footer
+		</h2>
+	</footer>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
+		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+		crossorigin="anonymous"></script>
+	<script src="js/app.js"></script>
 </body>
 
 </html>
