90% Experience section finalized

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <section class="row">
             <article class="sec-header">
                 <h3> <i class="fa fa-user"></i> About Me</h3>
+                <hr>
             </article>
             <article class="col-md-6">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit porro nisi qui nesciunt
@@ -93,34 +94,85 @@
         <section class="row">
             <article class="sec-header">
                 <h3> <i class="fa fa-history"></i> Experience</h3>
+                <hr>
             </article>
             <article>
-                <div class="card-container">
-                    <div class="card">
-                        <div class="front">
-                            <div>
-                                <h3>
-                                    <img class="ic-image" src="/images/bitsoftsolLogo.png" alt="Bitsoft">
-                                </h3>
-                                <h4> CTO</h4>
-                                <h5>(June 2020 - Present)</h5>
-                                <h6>
-                                    <details>
-                                        <summary> See the details... <i class="fa fa-arrow-right"></i> </summary>
-                                    </details>
-                                </h6>
-                                <!-- <h6>Full Stack Web Developer, Senior Software Engineer & now CTO</h6> -->
+                <div class="activity-elements">
+                    <div class="card-container">
+                        <div class="card">
+                            <div class="front">
+                                <div>
+                                    <h3>
+                                        <img class="ic-image" src="/images/bitsoftsolLogo.png" alt="Bitsoft">
+                                    </h3>
+                                    <h4> CTO</h4>
+                                    <h5>(June 2020 - Present)</h5>
+                                    <h6>
+                                        <details>
+                                            <summary> See the details... <i class="fa fa-arrow-right"></i> </summary>
+                                        </details>
+                                    </h6>
+                                    <!-- <h6>Full Stack Web Developer, Senior Software Engineer & now CTO</h6> -->
+                                </div>
+                            </div>
+                            <div class="back">
+                                <div>
+                                    <h4>Full Stack Web Developer</h4>
+                                    <h6>June 2020 - June 2021</h6>
+                                    <h4>Senior Web Developer</h4>
+                                    <h6>July 2021 - May 2022</h6>
+                                    <h4>CTO</h4>
+                                    <h6>June 2022 - Present</h6>
+
+                                </div>
                             </div>
                         </div>
-                        <div class="back">
-                            <div>
-                                <h4>Full Stack Web Developer</h4>
-                                <h6>June 2020 - June 2021</h6>
-                                <h4>Senior Software Engineer</h4>
-                                <h6>July 2021 - May 2022</h6>
-                                <h4>CTO</h4>
-                                <h6>June 2022 - Present</h6>
-
+                        <div class="card">
+                            <div class="front">
+                                <div>
+                                    <h3>
+                                        <img class="ic-image" src="/images/graymatrixLogo.png" alt="Bitsoft">
+                                    </h3>
+                                    <h4> Senior Web Developer</h4>
+                                    <h5>(December 2021 - May 2022)</h5>
+                                    <h6>
+                                        <details>
+                                            <summary> See the details... <i class="fa fa-arrow-right"></i> </summary>
+                                        </details>
+                                    </h6>
+                                    <!-- <h6>Full Stack Web Developer, Senior Software Engineer & now CTO</h6> -->
+                                </div>
+                            </div>
+                            <div class="back">
+                                <div>
+                                    <h4>Senior Web Developer</h4>
+                                    <h6>December 2021 - June 2022</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="front">
+                                <div>
+                                    <h3>
+                                        <img class="ic-image" src="/images/vaivalLogo.png" alt="Bitsoft">
+                                    </h3>
+                                    <h4>Full Stack Web Developer</h4>
+                                    <h5>(March 2022 - Present)</h5>
+                                    <h6>
+                                        <details>
+                                            <summary> See the details... <i class="fa fa-arrow-right"></i> </summary>
+                                        </details>
+                                    </h6>
+                                    <!-- <h6>Full Stack Web Developer, Senior Software Engineer & now CTO</h6> -->
+                                </div>
+                            </div>
+                            <div class="back">
+                                <div>
+                                    <h4>Backend Developer</h4>
+                                    <h6>March 2022 - May 2022</h6>
+                                    <h4>Full Stack Developerr</h4>
+                                    <h6>May 2022 - Present</h6>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -136,6 +188,7 @@
         <section class="row">
             <article class="sec-header">
                 <h3>Skills</h3>
+                <hr>
             </article>
             <article class="col-md-6">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit porro nisi qui nesciunt
@@ -152,6 +205,7 @@
         <section class="row">
             <article class="sec-header">
                 <h3>My Work</h3>
+                <hr>
             </article>
             <article class="col-md-6">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit porro nisi qui nesciunt
