working on experience section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <div class="front">
                                 <div>
                                     <h3>
-                                        <img class="ic-image" src="/images/bitsoftsolLogo.png" alt="Bitsoft">
+                                        <img class="ic-image" src="/icons/bitsoftsolLogo.ico" alt="Bitsoft">
                                     </h3>
                                     <h4> CTO</h4>
                                     <h5>(June 2020 - Present)</h5>
@@ -131,10 +131,10 @@
                             <div class="front">
                                 <div>
                                     <h3>
-                                        <img class="ic-image" src="/images/graymatrixLogo.png" alt="Bitsoft">
+                                        <img class="ic-image" src="/icons/graymatrixLogo.png" alt="Graymatrix">
                                     </h3>
                                     <h4> Senior Web Developer</h4>
-                                    <h5>(December 2021 - May 2022)</h5>
+                                    <h6> <b> (December 2021 - May 2022) </b></h6>
                                     <h6>
                                         <details>
                                             <summary> See the details... <i class="fa fa-arrow-right"></i> </summary>
@@ -154,7 +154,7 @@
                             <div class="front">
                                 <div>
                                     <h3>
-                                        <img class="ic-image" src="/images/vaivalLogo.png" alt="Bitsoft">
+                                        <img class="ic-image" src="/icons/vaivalLogo.png" alt="Vaival Technologies">
                                     </h3>
                                     <h4>Full Stack Web Developer</h4>
                                     <h5>(March 2022 - Present)</h5>
