front of all cards in experience section finalized

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <section class="row">
             <article class="sec-header">
-                <h3> <i class="fa fa-history"></i> Experience</h3>
+                <h3> <i class="fa fa-history"></i> Experience <span class="badge badge-success">2 years+</span></h3>
                 <hr>
             </article>
             <article>
@@ -105,11 +105,11 @@
                                     <h3>
                                         <img class="ic-image" src="/icons/bitsoftsolLogo.ico" alt="Bitsoft">
                                     </h3>
-                                    <h4> CTO</h4>
-                                    <h5>(June 2020 - Present)</h5>
+                                    <h4> Chief Technology Officer(CTO)</h4>
+                                    <h6> <b> (June 2022 - Present) </b></h6>
                                     <h6>
                                         <details>
-                                            <summary> See the details... <i class="fa fa-arrow-right"></i> </summary>
+                                            <summary> more details... <i class="fa fa-arrow-right"></i> </summary>
                                         </details>
                                     </h6>
                                     <!-- <h6>Full Stack Web Developer, Senior Software Engineer & now CTO</h6> -->
@@ -117,11 +117,11 @@
                             </div>
                             <div class="back">
                                 <div>
-                                    <h4>Full Stack Web Developer</h4>
-                                    <h6>June 2020 - June 2021</h6>
-                                    <h4>Senior Web Developer</h4>
-                                    <h6>July 2021 - May 2022</h6>
-                                    <h4>CTO</h4>
+                                    <h5>Full Stack Web Developer</h5>
+                                    <h6>June 2020 - June 2021 <span class="label label-secondary">( 1 Year )</span> </h6>
+                                    <h5>Senior Web Developer</h5>
+                                    <h6>July 2021 - May 2022 <span class="label label-secondary">( 11 months )</span></h6>
+                                    <h5>CTO</h5>
                                     <h6>June 2022 - Present</h6>
 
                                 </div>
@@ -137,7 +137,7 @@
                                     <h6> <b> (December 2021 - May 2022) </b></h6>
                                     <h6>
                                         <details>
-                                            <summary> See the details... <i class="fa fa-arrow-right"></i> </summary>
+                                            <summary> more details... <i class="fa fa-arrow-right"></i> </summary>
                                         </details>
                                     </h6>
                                     <!-- <h6>Full Stack Web Developer, Senior Software Engineer & now CTO</h6> -->
@@ -145,8 +145,8 @@
                             </div>
                             <div class="back">
                                 <div>
-                                    <h4>Senior Web Developer</h4>
-                                    <h6>December 2021 - June 2022</h6>
+                                    <h5>Senior Web Developer</h5>
+                                    <h6>December 2021 - June 2022 <span class="label label-secondary">( 6 months )</span></h6>
                                 </div>
                             </div>
                         </div>
@@ -157,10 +157,10 @@
                                         <img class="ic-image" src="/icons/vaivalLogo.png" alt="Vaival Technologies">
                                     </h3>
                                     <h4>Full Stack Web Developer</h4>
-                                    <h5>(March 2022 - Present)</h5>
+                                    <h6> <b> (May 2022 - Present) </b></h6>
                                     <h6>
                                         <details>
-                                            <summary> See the details... <i class="fa fa-arrow-right"></i> </summary>
+                                            <summary> more details... <i class="fa fa-arrow-right"></i> </summary>
                                         </details>
                                     </h6>
                                     <!-- <h6>Full Stack Web Developer, Senior Software Engineer & now CTO</h6> -->
@@ -168,9 +168,9 @@
                             </div>
                             <div class="back">
                                 <div>
-                                    <h4>Backend Developer</h4>
-                                    <h6>March 2022 - May 2022</h6>
-                                    <h4>Full Stack Developerr</h4>
+                                    <h5>Backend Developer</h5>
+                                    <h6>March 2022 - May 2022 <span class="label label-secondary">( 2 months )</span></h6>
+                                    <h5>Full Stack Web Developer</h5>
                                     <h6>May 2022 - Present</h6>
                                 </div>
                             </div>
