worked on experienc section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
                             <div class="front">
                                 <div>
                                     <h3>
-                                        <img class="ic-image" src="/icons/bitsoftsolLogo.ico" alt="Bitsoft">
+                                        <img class="ic-image" src="/icons/bitsoftsolLogo.ico" alt="Bitsoft"
+                                        width="175" height="74">
                                     </h3>
                                     <h4> Chief Technology Officer(CTO)</h4>
                                     <h6> <b> (June 2022 - Present) </b></h6>
@@ -131,7 +132,8 @@
                             <div class="front">
                                 <div>
                                     <h3>
-                                        <img class="ic-image" src="/icons/graymatrixLogo.png" alt="Graymatrix">
+                                        <img class="ic-image" src="/icons/graymatrixLogo.png" alt="Graymatrix"
+                                        width="175" height="74">
                                     </h3>
                                     <h4> Senior Web Developer</h4>
                                     <h6> <b> (December 2021 - May 2022) </b></h6>
@@ -154,7 +156,8 @@
                             <div class="front">
                                 <div>
                                     <h3>
-                                        <img class="ic-image" src="/icons/vaivalLogo.png" alt="Vaival Technologies">
+                                        <img class="ic-image" src="/icons/vaivalLogo.png" alt="Vaival Technologies"
+                                        width="175" height="74">
                                     </h3>
                                     <h4>Full Stack Web Developer</h4>
                                     <h6> <b> (May 2022 - Present) </b></h6>
