Skills bugs fixed

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                             <div class="front">
                                 <div>
                                     <h3>
-                                        <img class="ic-image" src="/icons/bitsoftsolLogo.ico" alt="Bitsoft"
-                                        width="175" height="74">
+                                        <img class="ic-image" src="/icons/bitsoftsolLogo.ico" alt="Bitsoft" width="175"
+                                            height="74">
                                     </h3>
                                     <h4> Chief Technology Officer(CTO)</h4>
                                     <h6> <b> (June 2022 - Present) </b></h6>
@@ -119,9 +119,11 @@
                             <div class="back">
                                 <div>
                                     <h5>Full Stack Web Developer</h5>
-                                    <h6>June 2020 - June 2021 <span class="label label-secondary">( 1 Year )</span> </h6>
+                                    <h6>June 2020 - June 2021 <span class="label label-secondary">( 1 Year )</span>
+                                    </h6>
                                     <h5>Senior Web Developer</h5>
-                                    <h6>July 2021 - May 2022 <span class="label label-secondary">( 11 months )</span></h6>
+                                    <h6>July 2021 - May 2022 <span class="label label-secondary">( 11 months )</span>
+                                    </h6>
                                     <h5>CTO</h5>
                                     <h6>June 2022 - Present</h6>
 
@@ -133,7 +135,7 @@
                                 <div>
                                     <h3>
                                         <img class="ic-image" src="/icons/graymatrixLogo.png" alt="Graymatrix"
-                                        width="175" height="74">
+                                            width="175" height="74">
                                     </h3>
                                     <h4> Senior Web Developer</h4>
                                     <h6> <b> (December 2021 - May 2022) </b></h6>
@@ -148,7 +150,8 @@
                             <div class="back">
                                 <div>
                                     <h5>Senior Web Developer</h5>
-                                    <h6>December 2021 - June 2022 <span class="label label-secondary">( 6 months )</span></h6>
+                                    <h6>December 2021 - June 2022 <span class="label label-secondary">( 6 months
+                                            )</span></h6>
                                 </div>
                             </div>
                         </div>
@@ -157,7 +160,7 @@
                                 <div>
                                     <h3>
                                         <img class="ic-image" src="/icons/vaivalLogo.png" alt="Vaival Technologies"
-                                        width="175" height="74">
+                                            width="175" height="74">
                                     </h3>
                                     <h4>Full Stack Web Developer</h4>
                                     <h6> <b> (May 2022 - Present) </b></h6>
@@ -172,7 +175,8 @@
                             <div class="back">
                                 <div>
                                     <h5>Backend Developer</h5>
-                                    <h6>March 2022 - May 2022 <span class="label label-secondary">( 2 months )</span></h6>
+                                    <h6>March 2022 - May 2022 <span class="label label-secondary">( 2 months )</span>
+                                    </h6>
                                     <h5>Full Stack Web Developer</h5>
                                     <h6>May 2022 - Present</h6>
                                 </div>
@@ -190,14 +194,26 @@
 
         <section class="row">
             <article class="sec-header">
-                <h3>Skills</h3>
+                <h3> <i class="fa fa-cogs"></i> Skills</h3>
                 <hr>
             </article>
-            <article class="col-md-6">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis reprehenderit porro nisi qui nesciunt
-                    praesentium dolor, aspernatur dolores suscipit labore omnis fugit facere nobis quasi hic impedit
-                    fugiat id? Omnis laborum inventore corporis, reiciendis quas quos quia vitae magnam reprehenderit
-                    iste, dolorum quibusdam fugiat nisi nam id neque iure eum!</p>
+            <article class="row" id="skills-progress">
+                <div class="progress">
+                    <span class="percent" style=" position: relative; left: -40px;"></span>
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45"
+                        aria-valuemin="0" aria-valuemax="100">
+                        <span class="sr-only">HTML/CSS</span>
+                    </div>
+                </div>
+
+                <div class="progress">
+                    <span class="percent" style=" position: relative; left: -40px;"></span>
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="90"
+                        aria-valuemin="0" aria-valuemax="100">
+                        <span class="sr-only">HTML/CSS</span>
+                    </div>
+                </div>
+
             </article>
         </section>
 
