--- a/index.html
+++ b/index.html
@@ -192,29 +192,115 @@
             <div class="fil-screen fixed-attachment" style="background-image: url(./images/Developer-1.jpg)"></div>
         </section>
 
-        <section class="row">
+        <section class="text-banner">
             <article class="sec-header">
                 <h3> <i class="fa fa-cogs"></i> Skills</h3>
                 <hr>
             </article>
             <article class="row" id="skills-progress">
-                <div class="progress">
-                    <span class="percent" style=" position: relative; left: -40px;"></span>
+                <div
+                    class="progress col-xs-8 col-md-offset-2 col-md-8 col-md-offset-2 col-lg-offset-2 col-lg-8 col-lg-offset-2">
+                    <!-- <span class="percent" style=" position: relative; left: -40px;"></span> -->
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="91"
+                        aria-valuemin="0" aria-valuemax="100">
+                        <span>PHP/LARAVEL</span>
+                        <span class="pull-right skill-level">Advance</span>
+                    </div>
+                </div>
+
+
+                <div
+                    class="progress col-xs-8 col-md-offset-2 col-md-8 col-md-offset-2 col-lg-offset-2 col-lg-8 col-lg-offset-2">
+                    <!-- <span class="percent" style=" position: relative; left: -40px;"></span> -->
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45"
                         aria-valuemin="0" aria-valuemax="100">
-                        <span class="sr-only">HTML/CSS</span>
+                        <span>HTML/CSS</span>
+                        <span class="pull-right skill-level">Intermediate</span>
                     </div>
                 </div>
 
-                <div class="progress">
-                    <span class="percent" style=" position: relative; left: -40px;"></span>
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="90"
+
+                <div
+                    class="progress col-xs-8 col-md-offset-2 col-md-8 col-md-offset-2 col-lg-offset-2 col-lg-8 col-lg-offset-2">
+                    <!-- <span class="percent" style=" position: relative; left: -40px;"></span> -->
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45"
                         aria-valuemin="0" aria-valuemax="100">
-                        <span class="sr-only">HTML/CSS</span>
+                        <span>JAVASCRIPT</span>
+                        <span class="pull-right skill-level">Intermediate</span>
                     </div>
                 </div>
+
+
+                <div
+                    class="progress col-xs-8 col-md-offset-2 col-md-8 col-md-offset-2 col-lg-offset-2 col-lg-8 col-lg-offset-2">
+                    <!-- <span class="percent" style=" position: relative; left: -40px;"></span> -->
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45"
+                        aria-valuemin="0" aria-valuemax="100">
+                        <span>CODEIGNITER</span>
+                        <span class="pull-right skill-level">Intermediate</span>
+                    </div>
+                </div>
+
+                <div
+                    class="progress col-xs-8 col-md-offset-2 col-md-8 col-md-offset-2 col-lg-offset-2 col-lg-8 col-lg-offset-2">
+                    <!-- <span class="percent" style=" position: relative; left: -40px;"></span> -->
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45"
+                        aria-valuemin="0" aria-valuemax="100">
+                        <span>MYSQL</span>
+                        <span class="pull-right skill-level">Intermediate</span>
+                    </div>
+                </div>
+            </article>
+
+            <article class="row skill-cards">
+
+                <div class="col-md-6 col-sm-6">
+                    <div class="skill-tech">
+                        <h4> <i class="fa fa-globe"></i> Web Development</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab nihil expedita
+                            necessitatibus quaerat natus ducimus pariatur sed hic fugit suscipit provident</p>
+                    </div>
+                </div>
+
+
+                <div class="col-md-6 col-sm-6">
+                    <div class="skill-tech">
+                        <h4><i class="fa fa-database"></i> Database</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab nihil expedita
+                            necessitatibus quaerat natus ducimus pariatur sed hic fugit suscipit provident</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-sm-6">
+                    <div class="skill-tech">
+                        <h4><img src="./icons/api.png" alt="" width="32" height="32"> Restful API's
+                        </h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab nihil expedita
+                            necessitatibus quaerat natus ducimus pariatur sed hic fugit suscipit provident</p>
+                    </div>
+                </div>
+
+
+                <div class="col-md-6 col-sm-6">
+                    <div class="skill-tech">
+                        <h4> <i class="fa fa-code"></i> Coding</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab nihil expedita
+                            necessitatibus quaerat natus ducimus pariatur sed hic fugit suscipit provident</p>
+                    </div>
+                </div>
+
+                <!-- <div class="col-md-6 col-sm-6 pull-left">
+                    <div class="skill-tech">
+                        <h4><i class="fa fa-heart-o"></i> Web Design
+                        </h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ab nihil expedita
+                            necessitatibus quaerat natus ducimus pariatur sed hic fugit suscipit provident</p>
+                    </div>
+                </div> -->
+
 
             </article>
+
         </section>
 
         <section class="row">
